--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Icon -->
   <link rel="shortcut icon"
-    href="https://avatars.githubusercontent.com/u/262317357?s=400&u=158b33a2394d0df396626ca4cdc8c86ae82b7360&v=4">
+    href="BPIG.JPG">
 
   <!-- Compiled and minified CSS, for design -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -124,7 +124,7 @@
       <!-- Card 1 -->
       <div class="card">
         <div class="card-content">
-          <img src="https://avatars.githubusercontent.com/u/262317357?s=400&u=158b33a2394d0df396626ca4cdc8c86ae82b7360&v=4" class="card" alt="avatar" width="200pt"
+          <img src="BPIG.JPG" class="card" alt="avatar" width="200pt"
             align="left" style="margin-right: 15pt;margin-bottom: 10pt; border-radius: 0%;">
           <span class="card-title" style="font-size:xx-large; font-weight: 700; text-transform: none;">
             嗨！👋</span>
